--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -18,51 +18,65 @@
             </option>
         </select>
         <br/>
-        <label class="control-label" for="va-start">Start:</label>
-        <timepicker id="va-start" ng-model="source.start"></timepicker>
-        <label class="control-label" for="va-end">End:</label>
-        <timepicker id="va-end" ng-model="source.end"></timepicker>
-        <br/>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="glyphicon glyphicon-arrow-right"></i>
+                    </div>
+                    <timepicker id="va-start" ng-model="source.start"></timepicker>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="input-group">
+                    <timepicker id="va-end" ng-model="source.end"></timepicker>
+                    <div class="input-group-addon">
+                        <i class="glyphicon glyphicon-arrow-left"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="box-footer">
-        <div>
-            <div class="pull-left" ng-hide="source.isEditMode">
-                <a ng-click="toggle = !toggle">{{!toggle ? source.comments.length + ' comment(s)' : 'hide comments'}}</a>
-            </div>
-            <div class="pull-right" ng-show="source.canEdit && !source.isEditMode">
-                <a class="btn btn-primary btn-xs" ng-click="editAnnotation()">EDIT</a>
-                <a class="btn btn-danger btn-xs" ng-click="deleteAnnotation()">DELETE</a>
-            </div>
+</div>
+<div class="box-footer">
+    <div>
+        <div class="pull-left" ng-hide="source.isEditMode">
+            <a ng-click="toggle = !toggle">{{!toggle ? source.comments.length + ' comment(s)' : 'hide comments'}}</a>
         </div>
-        <div class="clearfix"></div>
-        <div ng-show="source.isEditMode">
-            <a class="btn btn-primary btn-xs" ng-click="saveAnnotation()">SAVE</a>
-            <a ng-hide="source.isDefault" ng-click="closeAnnotation()" class="btn btn-danger btn-xs">CLOSE</a>
-            <a ng-show="source.isDefault" ng-click="cancelAnnotation()" class="btn btn-danger btn-xs">CANCEL</a>
+        <div class="pull-right" ng-show="source.canEdit && !source.isEditMode">
+            <a class="btn btn-primary btn-xs" ng-click="editAnnotation()">EDIT</a>
+            <a class="btn btn-danger btn-xs" ng-click="deleteAnnotation()">DELETE</a>
         </div>
-        <div ng-hide="source.isEditMode" id="comments">
-            <article ng-show="toggle">
-                <br/>
-                <div id="comment-box" class="input-group input-group-sm">
-                    <input class="form-control" placeholder="Write a comment..." type="text" ng-model="commentText">
-                    <span class="input-group-btn">
+    </div>
+    <div class="clearfix"></div>
+    <div ng-show="source.isEditMode">
+        <a class="btn btn-primary btn-xs" ng-click="saveAnnotation()">SAVE</a>
+        <a ng-hide="source.isDefault" ng-click="closeAnnotation()" class="btn btn-danger btn-xs">CLOSE</a>
+        <a ng-show="source.isDefault" ng-click="cancelAnnotation()" class="btn btn-danger btn-xs">CANCEL</a>
+    </div>
+    <div ng-hide="source.isEditMode" id="comments">
+        <article ng-show="toggle">
+            <br/>
+            <div id="comment-box" class="input-group input-group-sm">
+                <input class="form-control" placeholder="Write a comment..." type="text" ng-model="commentText">
+                <span class="input-group-btn">
                       <button class="btn btn-primary btn-flat" type="submit" ng-click="postComment()">REPLY</button>
                     </span>
-                </div>
-                <br/>
-                <section ng-repeat="comment in source.comments.slice().reverse()">
-                    <div class="box box-solid" style="background: rgba(0, 0, 255, 0.05)">
-                        <div class="box-body">
-                            <span class="posted-at">
+            </div>
+            <br/>
+            <section ng-repeat="comment in source.comments.slice().reverse()">
+                <div class="box box-solid" style="background: rgba(0, 0, 255, 0.05)">
+                    <div class="box-body">
+                        <span class="posted-at">
                               Posted <strong>{{comment.date_created | relativeDate}}</strong>
                               By <strong><span>{{comment.author}}</span></strong>
-                            </span>
-                            <a class="pull-right" style="cursor: pointer;" ng-show="comment.canEdit" ng-click="removeComment(comment._id)">X</a>
-                            <p class="reply">{{comment.text}}</p>
-                        </div>
+                        </span>
+                        <a class="pull-right" style="cursor: pointer;" ng-show="comment.canEdit" ng-click="removeComment(comment._id)">X</a>
+                        <p class="reply">{{comment.text}}</p>
                     </div>
-                </section>
-            </article>
-        </div>
+                </div>
+            </section>
+        </article>
     </div>
+</div>
 </div>
