--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -4,13 +4,15 @@
             <span>[{{source.start | msToTime}} - {{source.end | msToTime}}]</span>
             <span class="posted-at">
                       Posted <strong>{{source.date_created | relativeDate}}</strong>
-                      By <strong>{{source.author}}</strong>
+                      By <strong>{{source.authorDisplayName||source.author}}</strong>
                 </span>
         </p>
+
         <p id="annotation-text" ng-click="$parent.seekPosition(source)">{{source.text}}</p>
     </div>
     <div class="box-body form-group" ng-show="source.isEditMode">
-        <textarea placeholder="Start annotating..." class="form-control" rows="5" id="va-text" type="text" ng-model="source.text"></textarea>
+        <textarea placeholder="Start annotating..." class="form-control" rows="5" id="va-text" type="text"
+                  ng-model="source.text"></textarea>
         <br/>
         <select class="form-control" ng-model="source.type">
             <option ng-selected="type.id===source.type" ng-repeat="type in annotationTypes" value="{{type.id}}">
@@ -18,6 +20,7 @@
             </option>
         </select>
         <br/>
+
         <div class="row">
             <div class="col-xs-6">
                 <div class="input-group">
@@ -41,7 +44,8 @@
     <div class="box-footer">
         <div>
             <div class="pull-left" ng-hide="source.isEditMode">
-                <a ng-click="toggle = !toggle">{{!toggle ? source.comments.length + ' comment(s)' : 'hide comments'}}</a>
+                <a ng-click="toggle = !toggle">{{!toggle ? source.comments.length + ' comment(s)' : 'hide
+                    comments'}}</a>
             </div>
             <div class="pull-right" ng-show="source.canEdit && !source.isEditMode">
                 <a class="btn btn-primary btn-xs" ng-click="editAnnotation()">EDIT</a>
@@ -57,6 +61,7 @@
         <div ng-hide="source.isEditMode" id="comments">
             <article ng-show="toggle">
                 <br/>
+
                 <div id="comment-box" class="input-group input-group-sm">
                     <input class="form-control" placeholder="Write a comment..." type="text" ng-model="commentText">
                     <span class="input-group-btn">
@@ -69,9 +74,11 @@
                         <div class="box-body">
                             <span class="posted-at">
                               Posted <strong>{{comment.date_created | relativeDate}}</strong>
-                              By <strong><span>{{comment.author}}</span></strong>
+                              By <strong><span>{{comment.authorDisplayName||comment.author}}</span></strong>
                             </span>
-                            <a class="pull-right" style="cursor: pointer;" ng-show="comment.canEdit" ng-click="removeComment(comment._id)">X</a>
+                            <a class="pull-right" style="cursor: pointer;" ng-show="comment.canEdit"
+                               ng-click="removeComment(comment._id)">X</a>
+
                             <p class="reply">{{comment.text}}</p>
                         </div>
                     </div>
