--- a/public/countprint/example.html
+++ b/public/countprint/example.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<div class="countprint"/>
+<div class="countprint" style="width: 600px"/>
 
 <script src="countprint.js"></script>
 <script>
