--- a/public/countprint/example.html
+++ b/public/countprint/example.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
 </head>
-<body>
+<body style="padding-top: 100px">
+<div class="countprint" style="width: 600px;">
+    <span class="countprint-tooltip"></span>
+</div>
 
-<div class="countprint" style="width: 600px"/>
-
+<script src="jquery.min.js"></script>
 <script src="countprint.js"></script>
 <script>
-    var data = [0, 15, 9, 8, 7, 2, 5, 0, 0, 6, 0, 100, 2, 1, 0, 0, 10, 2, 3, 1, 31, 0, 0, 11, 1, 0, 0, 10, 23, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    var data = [0, 15, 9, 8, 7, 2, 5, 0, 0, 6, 0, 100, 2, 23, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
     new CountPrint(data, {
         container: 'countprint',
+        tooltip: 'countprint-tooltip',
         maxValue: 10
     });
 </script>
