--- a/public/countprint/example.html
+++ b/public/countprint/example.html
@@ -7,10 +7,9 @@
     <span class="countprint-tooltip"></span>
 </div>
 
-<script src="jquery.min.js"></script>
 <script src="countprint.js"></script>
 <script>
-    var data = [0, 15, 9, 8, 7, 2, 5, 0, 0, 6, 0, 100, 2, 23, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    var data = [0,1,2,3,4,5,6,7,8,9,10];
     new CountPrint(data, {
         container: 'countprint',
         tooltip: 'countprint-tooltip',
