--- a/public/countprint/example.html
+++ b/public/countprint/example.html
@@ -9,12 +9,15 @@
 
 <script src="countprint.js"></script>
 <script>
-    var data = [0,1,2,3,4,5,6,7,8,9,10];
-    new CountPrint(data, {
+    var data = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    var cp = new CountPrint(data, {
         container: 'countprint',
         tooltip: 'countprint-tooltip',
         maxValue: 10
     });
+    cp.onCountSelected = function (count) {
+        console.log('Selected count: ' + count);
+    };
 </script>
 </body>
 </html>
