--- a/public/countprint/example.html
+++ b/public/countprint/example.html
@@ -32,7 +32,7 @@
         {page: 20},
         {page: 20},
         {page: 20},
-        {pagepage: 1}
+        {page: 1}
     ];
 
     var result = _.reduce(annotations, function (result, value, key) {
