--- a/public/src/countmap/samples/example.html
+++ b/public/src/countmap/samples/example.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../countmap.css">
 </head>
 <body style="padding-top: 100px">
-<div class="countprint">
-    <span class="countprint-tooltip"></span>
+<div class="countmap">
+    <span class="countmap-tooltip"></span>
 </div>
 
-<script src="lodash.min.js"></script>
-<script src="countprint.js"></script>
+<script src="./lodash.min.js"></script>
+<script src="../countmap.js"></script>
 <script>
 
     var annotations = [
@@ -37,16 +38,16 @@
         {page: 20}
     ];
 
-    var cp = new CountPrint({
+    var cm = new CountMap({
         segments: annotations,
         segmentKey: 'page',
         totalSegments: 30,
-        container: 'countprint',
-        tooltip: 'countprint-tooltip',
+        container: 'countmap',
+        tooltip: 'countmap-tooltip',
         maxValue: 10,
         colorful: true
     });
-    cp.onCountSelected = function (page) {
+    cm.onCountSelected = function (page) {
         console.log('Selected page: ' + page);
     };
 </script>
