--- a/public/src/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/src/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -1,7 +1,9 @@
 <div class="col-md-7">
-    <videogular class="embed-responsive embed-responsive-16by9" vg-youtube="rel=1;showinfo=0;iv_load_policy=3"
+    <videogular class="embed-responsive embed-responsive-16by9"
+                vg-youtube="rel=1;showinfo=0;iv_load_policy=3"
                 vg-player-ready="onPlayerReady($API)"
-                vg-cue-points="cuePoints" vg-update-state="onUpdateState($state)">
+                vg-cue-points="cuePoints"
+                vg-update-state="onUpdateState($state)">
         <vg-media vg-src="sources"></vg-media>
         <vg-controls vg-autohide="true" vg-autohide-time="10000">
             <vg-play-pause-button></vg-play-pause-button>
