fix gridstack deprecated fields

--- a/public/js/video-annotations/va-annotation/va-annotation.html
+++ b/public/js/video-annotations/va-annotation/va-annotation.html
@@ -42,8 +42,7 @@
     <div class="box-footer">
         <div>
             <div class="pull-left" ng-hide="source.isEditMode">
-                <a ng-click="toggle = !toggle">{{!toggle ? source.comments.length + ' comment(s)' : 'hide
-                    comments'}}</a>
+                <a ng-click="toggle = !toggle">{{!toggle ? source.comments.length + ' comment(s)' : 'hide comments' }}</a>
             </div>
             <div class="pull-right" ng-show="source.canEdit && !source.isEditMode">
                 <a class="btn btn-primary btn-xs" ng-click="editAnnotation()">EDIT</a>
