fixed timepicker directive

--- a/public/js/video-annotations/va-annotation/va-annotation.html
+++ b/public/js/video-annotations/va-annotation/va-annotation.html
@@ -25,12 +25,12 @@
                     <div class="input-group-addon">
                         <i class="glyphicon glyphicon-arrow-right"></i>
                     </div>
-                    <timepicker id="va-start" ng-model="source.start"></timepicker>
+                    <cm-timepicker id="va-start" ng-model="source.start"></cm-timepicker>
                 </div>
             </div>
             <div class="col-xs-6">
                 <div class="input-group">
-                    <timepicker id="va-end" ng-model="source.end"></timepicker>
+                    <cm-timepicker id="va-end" ng-model="source.end"></cm-timepicker>
                     <div class="input-group-addon">
                         <i class="glyphicon glyphicon-arrow-left"></i>
                     </div>
