--- a/public/js/video-annotations/va-widget/va-widget.html
+++ b/public/js/video-annotations/va-widget/va-widget.html
@@ -7,7 +7,6 @@
         <vg-media vg-src="sources"></vg-media>
         <vg-controls vg-autohide="true" vg-autohide-time="10000">
             <vg-play-pause-button></vg-play-pause-button>
-            <vg-resume-button></vg-resume-button>
             <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
             <vg-scrub-bar>
                 <vg-scrub-bar-current-time ng-show="selectedBar!=='fp' "></vg-scrub-bar-current-time>
@@ -36,7 +35,14 @@
     </videogular>
     <div class="panel panel-default">
         <div class="panel-body">
-            <div class="col-md-3">
+            <div class="col-md-3 form-group">
+                <button class="btn btn-block btn-primary btn-sm" type="button" ng-click="onClickedResume()">
+                    Resume: {{lastPos | msToTime}}
+                </button>
+            </div>
+            <div class="col-md-3 form-group"></div>
+            <div class="col-md-3 form-group"></div>
+            <div class="col-md-3 form-group">
                 <select class="form-control" ng-model="selectedBar">
                     <option value="" selected disabled>Select analytics bar...</option>
                     <option value="none">None</option>
