--- a/public/js/video-annotations/va-widget/va-widget.html
+++ b/public/js/video-annotations/va-widget/va-widget.html
@@ -19,7 +19,7 @@
             <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
             <vg-footprint-info ng-class="{invisible: (selectedBar!=='fp')}"></vg-footprint-info>
             <vg-fullscreen-button></vg-fullscreen-button>
-            <vg-playback-button></vg-playback-button>
+            <!--<vg-playback-button></vg-playback-button>-->
             <vg-volume>
                 <vg-mute-button></vg-mute-button>
                 <vg-volume-bar></vg-volume-bar>
