--- a/public/js/video-annotations/va-widget/va-widget.html
+++ b/public/js/video-annotations/va-widget/va-widget.html
@@ -51,14 +51,21 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="col-md-3 form-group">
-                <select class="form-control" ng-model="selectedBar">
+                <select class="row form-control" ng-model="selectedBar">
                     <option value="" selected disabled>Select analytics bar...</option>
                     <option value="none">None</option>
                     <option value="va">Video Annotations</option>
                     <option value="fp">Footprint</option>
                 </select>
             </div>
-            <div class="col-md-3 form-group"></div>
+            <div ng-show="selectedBar==='va' " class="col-md-3 form-group">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" ng-model="isAMapPersonal" ng-change="isAMapPersonalChange()">
+                        Show only authored annotations
+                    </label>
+                </div>
+            </div>
             <div class="col-md-3 form-group"></div>
             <div class="col-md-3 form-group">
                 <button ng-hide="!lastPos" class="btn btn-block btn-primary btn-sm" type="button"
