--- a/public/js/video-annotations/va-widget/va-widget.html
+++ b/public/js/video-annotations/va-widget/va-widget.html
@@ -62,7 +62,7 @@
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" ng-model="isAMapPersonal" ng-change="isAMapPersonalChange()">
-                        Show only authored annotations
+                        Show my annotations only
                     </label>
                 </div>
             </div>
