load properly annotations

--- a/public/js/video-annotations/va-annotation/va-annotation.html
+++ b/public/js/video-annotations/va-annotation/va-annotation.html
@@ -44,8 +44,8 @@
         </div>
         <div class="form-control">
             <label>
-                <input type="checkbox" ng-model="source.isPrivate" ng-true-value="false" ng-false-value="true">
-                Share annotation
+                <input type="checkbox" ng-model="source.isPrivate">
+                Private annotation
             </label>
         </div>
     </div>
