--- a/public/learningHubTemplates/hubimage.html
+++ b/public/learningHubTemplates/hubimage.html
@@ -32,7 +32,7 @@
             <div class="col-xs-1" ng-show="!vm.space">
                 <voting vote-type="link" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
             </div>
-            <div class="col-xs-11 image-wrapper">
+            <div class="col-xs-11 image-wrapper hub-image center-block">
                 <div ng-bind-html="vm.post.embedHtml | trustHtml"></div>
             </div>
             <div class="col-xs-11">
