--- a/public/learningHubTemplates/hubslide.html
+++ b/public/learningHubTemplates/hubslide.html
@@ -41,36 +41,37 @@
             </div>
         </div>
     </div>
-</div>
-<div class="box-footer" ng-show="!vm.space">
-    <a ng-click="toggle = !toggle">
-        <span ng-if="vm.post.comments.length == 0">No Comments</span>
+    <div class="box-footer" ng-show="!vm.space">
+        <a ng-click="toggle = !toggle">
+            <span ng-if="vm.post.comments.length == 0">No Comments</span>
             <span ng-if="vm.post.comments.length > 0">{{vm.post.comments.length == 1 ? vm.post.comments.length + " Comment" :
                 vm.post.comments.length + " Comments"}}</span>
-    </a>
-    <div  id="{{'c'+vm.post.postId}}" class="toggle">
-        <article>
-            <br/>
-            <div id="comment-box" class="input-group input-group-sm">
-                <input class="form-control" placeholder="Write a comment..." type="text" ng-model="vm.commentText">
+        </a>
+        <div  id="{{'c'+vm.post.postId}}" ng-show="toggle">
+            <article>
+                <br/>
+                <div id="comment-box" class="input-group input-group-sm">
+                    <input class="form-control" placeholder="Write a comment..." type="text" ng-model="vm.commentText">
                     <span class="input-group-btn">
                       <button class="btn btn-primary btn-flat" type="submit" ng-click="vm.postComment(vm.post)">Comment</button>
                     </span>
-            </div>
-            <br/>
-            <section ng-repeat="comment in vm.post.comments.slice().reverse()">
-                <div class="box box-solid" style="background: rgba(0, 0, 255, 0.05)">
-                    <div class="box-body">
+                </div>
+                <br/>
+                <section ng-repeat="comment in vm.post.comments.slice().reverse()">
+                    <div class="box box-solid" style="background: rgba(0, 0, 255, 0.05)">
+                        <div class="box-body">
                             <span class="posted-at">
                               Posted <strong>{{comment.dateAdded | relativeDate}}</strong>
                               By <strong><span>{{comment.authorDisplayName||comment.author}}</span></strong>
                             </span>
-                        <a class="pull-right" style="cursor: pointer;" ng-show="comment.canEdit"
-                           ng-click="vm.removeComment(comment._id)">X</a>
-                        <p class="reply">{{comment.text}}</p>
+                            <a class="pull-right" style="cursor: pointer;" ng-show="comment.canEdit"
+                               ng-click="vm.removeComment(comment._id)">X</a>
+                            <p class="reply">{{comment.text}}</p>
+                        </div>
                     </div>
-                </div>
-            </section>
-        </article>
+                </section>
+            </article>
+        </div>
     </div>
 </div>
+
