--- a/public/learningHubTemplates/hublinkthumb.html
+++ b/public/learningHubTemplates/hublinkthumb.html
@@ -33,7 +33,7 @@
                 <voting vote-type="link" vote-type-id={{vm.post.postId}} vote-value="" ng-show="!pa"></voting>
             </div>
             <div class="col-md-4 text-center link-image link-wrapper">
-                <img class="img-responsive img-thumbnail hub-thumb-image center-block" src="{{vm.post.image}}" alt="vm.post.title">
+                <img class="img-responsive img-thumbnail hub-thumb-image center-block" src="{{vm.post.image}}" alt="{{vm.post.title}}">
             </div>
             <div class="col-md-7 link-description">
                 <h4><b>Description</b></h4>
