--- a/public/js/video-annotations/va-annotation/va-annotation.html
+++ b/public/js/video-annotations/va-annotation/va-annotation.html
@@ -13,7 +13,7 @@
         </p>
         <p id="annotation-text" ng-click="$parent.seekPosition(source)">{{source.text}}</p>
     </div>
-    <div class="box-body form-group" ng-show="source.isEditMode">
+    <div class="box-body form-group" ng-show="source.isEditMode" style="margin-bottom: 0px; padding-bottom: 0px;">
         <textarea placeholder="Start annotating..." class="form-control" rows="5" id="va-text" type="text"
                   ng-model="source.text"></textarea>
         <br/>
@@ -49,7 +49,7 @@
             </label>
         </div>
     </div>
-    <div class="box-footer">
+    <div class="box-footer" style="display: flow-root;">
         <div>
             <div class="pull-left" ng-hide="source.isEditMode">
                 <a ng-click="toggle = !toggle">{{!toggle ? source.comments.length + ' comment(s)' : 'hide comments'
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div ng-show="source.isEditMode">
+        <div class="pull-right" ng-show="source.isEditMode">
             <a class="btn btn-primary btn-xs" ng-click="saveAnnotation()">SAVE</a>
             <a ng-hide="source.isDefault" ng-click="closeAnnotation()" class="btn btn-danger btn-xs">CLOSE</a>
             <a ng-show="source.isDefault" ng-click="cancelAnnotation()" class="btn btn-danger btn-xs">CANCEL</a>
